--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 	<title>contactform</title>
 </head>
 <body>
-
+<!-- Is A comment -->
 <form>
 	<label> First Name<br>
 		<input type="text" name="fname" placeholder="Bruce">
@@ -62,6 +62,9 @@
 	 	<input type="submit" name="submit" value="Register">
 	 	<br>
 	 </form>
+<footer>
+	&amp; copywrite company 2016. All rights reserved.
 
+</footer>
 </body>
 </html>
