--- a/idex.html
+++ b/idex.html
@@ -3,10 +3,15 @@
 <head>
 	<title>my awesome site
 	</title>
+	<style>
+	h2{
+		font-family: sans-sariff;
+		}
+	</style>
 </head>
 	<body>
 		<img src="img/testimg1_360.jpg">
-
+    <h1 style="color:blue;">header 1</h1>
 		<h1>This is The Page title</h1>
 		<img src="http://mylittlepony.hasbro.com/images/spring2016/ponies/char_fluttershy.png">
 		<h2>this is a sub head 1</h2>
@@ -64,5 +69,8 @@
 
 	</tr>
 </table>
+
+p><b>Lorem ipsum dolor sit amet,</b> <br>sapien ligula lectus et turpis, voluptatem ac donec ligula in, id amet cum magna tempor libero nullam. Aliquam enim diam consectetuer, commodo nibh maecenas orci neque at.</p><p> Quis massa laudantium lorem semper. Pulvinar ante, sollicitudin a. Eu non, iaculis lacus montes integer faucibus, incidunt turpis ornare aliquam vulputate condimentum. Tempus et, pellentesque donec nam amet neque ut orci, egestas vestibulum nulla vel, pellentesque pellentesque
+		</p>
 	</body>
 </html>
